--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -21,14 +21,14 @@ body {
 }
 
 header {
-  background-color: #333;
+  background-color: #303134;
   color: #fff;
   padding: 10px;
   text-align: center;
 }
 
 nav {
-  background-color: #444;
+  background-color: #303134;
   color: #fff;
   padding: 10px;
 }
@@ -43,12 +43,6 @@ nav li {
   margin-right: 10px;
 }
 
-.container {
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 20px;
-}
-
 h1,
 h2,
 h3,
@@ -59,16 +53,8 @@ p {
   color: #e8eaed;
 }
 
-button {
-  display: inline-block;
-  padding: 10px 20px;
-  background-color: #303134;
-  color: #e8eaed;
+a {
   text-decoration: none;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  transition: background-color 0.3s;
 }
 
 button:hover {
@@ -80,7 +66,7 @@ form {
 }
 
 footer {
-  background-color: #333;
+  background-color: #303134;
   color: #fff;
   text-align: center;
   padding: 10px;
@@ -97,10 +83,63 @@ footer {
   }
 }
 
+/* "components" */
+
+.section-container {
+  border: 2px solid #303134;
+  background: #202124;
+  border-radius: 5px;
+  padding: 1rem;
+  display: flex;
+  gap: 0.75rem;
+  flex-direction: column;
+  align-items: center;
+}
+
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 20px;
+}
+
+button {
+  display: inline-block;
+  padding: 10px 20px;
+  background-color: #303134;
+  color: #bcc0c3;
+  text-decoration: none;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+label {
+  color: #bcc0c3;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 0.5rem;
+  align-items: center;
+}
+
+input,
+select,
+textarea {
+  border: 1px solid #303134;
+  background: #202124;
+  color: #bcc0c3;
+  border-radius: 5px;
+  padding: 0 0.75rem;
+  height: 2rem;
+}
+
+textarea {
+  padding: 0.75rem;
+}
+
 /* content div */
 
 .content {
-  /* border: 1px solid black; */
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -161,10 +200,36 @@ footer {
   gap: 1rem;
 }
 
-.form-for-chart input[type='date'] {
-  border: 1px solid #303134;
-  background: #202124;
-  color: white;
-  /* height: 32px; */
-  border-radius: 5px;
+/* serviços */
+
+.servicos-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 2rem;
+  justify-content: center;
+}
+
+.servicos-cliente-form {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  text-align: center;
+  padding: 0 1rem;
+}
+
+.servicos-cliente-form label {
+  align-self: end;
+}
+
+.servicos-form {
+  display: flex;
+  gap: 1rem;
+  flex-wrap: wrap;
+  max-width: 450px;
+}
+
+.servicos-buttons-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem;
 }
