--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -18,19 +18,19 @@ body {
   font-family: Arial, sans-serif;
   background-color: #f2f2f2;
   background: #202124;
+  background: linear-gradient(to right, #202124, #303134);
 }
 
 header {
-  background-color: #303134;
+  /* background-color: #303134; */
   color: #fff;
-  padding: 10px;
+  padding: 20px 0;
   text-align: center;
 }
 
 nav {
   background-color: #303134;
   color: #fff;
-  padding: 10px;
 }
 
 nav ul {
@@ -58,7 +58,7 @@ a {
 }
 
 button:hover {
-  background-color: #555;
+  background-color: #444;
 }
 
 form {
